# fastapi-async-safe-dependencies

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: benchmark.yml  lint.yml  publish.yml  test.yml
benchmark/: DB.md  README.md  app.py  graph.py  run.py  run.sh  runner.py  utils.py
benchmark/apps/: app.py  db_app.py  fastapi_example_app.py  injector.py
fastapi_async_safe/: __init__.py  decorators.py  dependencies.py  ext.py  markers.py  types.py
tests/: test_dependencies.py  test_markers.py  utils.py
