[tool.poetry]
name = "fastapi-async-safe-dependencies"
version = "0.1.2"
description = "FastAPI async safe dependencies"
authors = [
    "Yurii Karabas <1998uriyyo@gmail.com>",
]
packages = [
    {include = "fastapi_async_safe"},
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/uriyyo/fastapi-async-safe-dependencies"

classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.109,<0.125"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4,<9.0.0"
pytest-asyncio = ">=0.23.3,<1.3.0"
pytest-cov = ">=4.1,<8.0"
ruff = ">=0.5.0,<0.15.0"
mypy = "^1.8.0"
pre-commit = ">=3.6,<5.0"
httpx = ">=0.26,<0.29"
asgi-lifespan = "^2.1.0"
click = "^8.1.7"
uvicorn = {version = ">=0.27,<0.39", extras = ["standard"]}
matplotlib = "^3.8.2"
fastapi-lifespan-manager = "^0.1.3"
sqlalchemy = "^2.0.25"
asyncpg = ">=0.29,<0.32"
dependency-injector = { version = "^4.41.0", python = "<3.12" }  # python 3.12 still not supported by dependency-injector

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "RUF", # ruff specific rules
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "S101", # use of assert detected
    "PT013", # allow from pytest import thing
    "COM812", # formater will handle commas
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = 3.9
strict = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = false
show_column_numbers = true
show_error_codes = true

[tool.coverage.paths]
source = ["fastapi_async_safe"]

[tool.coverage.run]
source = ["fastapi_async_safe"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "@overload",
    "if TYPE_CHECKING:",
]
